# oxideq

./: .dockerignore  .env  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  docker-compose.yml
docs/: API.md  CONFIGURATION.md  README.md
src/: lib.rs  main.rs
src/replication/: combined_storage.rs  mod.rs  network.rs  types.rs
src/server/: mod.rs
src/shutdown/: mod.rs
src/storage/: memory.rs  mod.rs
src/storage/wal/: manager.rs  mod.rs
src/telemetry/: mod.rs
src/tls/: mod.rs
tests/: api_tests.rs  batch_tests.rs  persistence_test.rs  raft_tests.rs
