[package]
name = "oxideq"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version="0.8.7", features = ["http2","json"]}
tokio = { version = "1.48.0", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "6.0"
rmp-serde = "1.3"
openraft = { version = "0.9", features = ["serde"] }
sled = "0.34"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
subtle = "2.5"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
bytes = "1.0"